upload all changes
